--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>이연재_서비스기획_포트폴리오</title>
+  <title>이연재_포트폴리오_2023</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
 <iframe src="https://docs.google.com/gview?url=https://github.com/yeonjae-lee-colin/2023portfolio/raw/main/yeonjaelee_portfolio_2023.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
